adicionado icones a tela de lanches, adicionado listagem de pedidos por data na pagina pedidos

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
+  <meta Http-Equiv="Cache-Control" Content="no-cache">
+
   <link rel="icon" type="image/png" href="assets/icon/patos.png" />
 
   <!-- add to homescreen for ios -->
