adicionado pagina de totais, concluido pagina para adicionar novo produto, inserido botão de excluir produto existente.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
   <title>Patos Burgers</title>
 
   <base href="/" />
